# AI-Agent-Traders

./: .ai-instructions.md  .cursorrules  .dockerignore  .env.example  .gitignore  AI_MEMORY.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  models.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml
agents/comm_executor/: AGENTS.md  IDENTITY.md  SOUL.md
agents/data_aggregator/: AGENTS.md  IDENTITY.md  SOUL.md
agents/lead/: AGENTS.md  IDENTITY.md  SOUL.md
agents/market_analyst/: AGENTS.md  IDENTITY.md  SOUL.md
agents/performance_analyst/: AGENTS.md  IDENTITY.md  SOUL.md
agents/portfolio_manager/: AGENTS.md  IDENTITY.md  SOUL.md
agents/strategy_engineer/: AGENTS.md  IDENTITY.md  SOUL.md
config/: openclaw.json
dashboard/: AGENTS.md  CLAUDE.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
data/: market_state.json  paper_state.json
docker/: dashboard.Dockerfile  gateway.Dockerfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING_AI.md
scripts/: health_check.py
scripts/ai/: check_github.py  check_health.py  continuous_loop.py  get_telegram_id.py  sync_env.py  validate_system.py  verify_all.py
scripts/infra/: start_openclaw.sh
skills/: data_batch.md  final_batch.md
skills/approval/: SKILL.md  package.json
skills/backtest/: SKILL.md  package.json
skills/deep_memory/: SKILL.md
skills/dex_oracle/: SKILL.md  package.json
skills/execution/: SKILL.md  package.json
(+32 files in other folders)
